--- a/crudboy-framework/src/main/resources/codegen/java/controller/controller.vm
+++ b/crudboy-framework/src/main/resources/codegen/java/controller/controller.vm
@@ -45,16 +45,16 @@ public class ${sceneEnum.prefixClass}${table.className}Controller {
     @Operation(summary = "创建${table.classComment}")
 #if ($sceneEnum.scene == 1)    @PreAuthorize("@ss.hasPermission('${permissionPrefix}:create')")#end
 
-    public CommonResult<${primaryColumn.javaType}> create(@Valid @RequestBody ${sceneEnum.prefixClass}${table.className}DO createReqVO) {
+    public CommonResult<${primaryColumn.javaType}> create(@Valid @RequestBody ${sceneEnum.prefixClass}${table.className}CreateReqVO createReqVO) {
         return success(service.create(createReqVO));
     }
 
-    @PutMapping("/updateById")
+    @PutMapping("/update")
     @Operation(summary = "更新${table.classComment}")
 #if ($sceneEnum.scene == 1)    @PreAuthorize("@ss.hasPermission('${permissionPrefix}:update')")#end
 
-    public CommonResult<Boolean> updateById(@Valid @RequestBody ${sceneEnum.prefixClass}${table.className}DO updateReqVO) {
-        service.updateById(updateReqVO);
+    public CommonResult<Boolean> update(@Valid @RequestBody ${sceneEnum.prefixClass}${table.className}UpdateReqVO updateReqVO) {
+        service.update(updateReqVO);
         return success(true);
     }
 
@@ -68,23 +68,23 @@ public class ${sceneEnum.prefixClass}${table.className}Controller {
         return success(true);
     }
 
-    @GetMapping("/getById")
+    @GetMapping("/get")
     @Operation(summary = "获得${table.classComment}")
     @Parameter(name = "id", description = "编号", required = true, example = "1024")
 #if ($sceneEnum.scene == 1)    @PreAuthorize("@ss.hasPermission('${permissionPrefix}:query')")#end
 
-    public CommonResult<${sceneEnum.prefixClass}${table.className}RespVO> getById(@RequestParam("id") ${primaryColumn.javaType} id) {
-        ${table.className}DO ${classNameVar} = service.getById(id);
+    public CommonResult<${sceneEnum.prefixClass}${table.className}RespVO> get(@RequestParam("id") ${primaryColumn.javaType} id) {
+        ${table.className}DO ${classNameVar} = service.get(id);
         return success(${table.className}Convert.INSTANCE.convert(${classNameVar}));
     }
 
-    @GetMapping("/listByIds")
+    @GetMapping("/list")
     @Operation(summary = "获得${table.classComment}列表")
     @Parameter(name = "ids", description = "编号列表", required = true, example = "1024,2048")
 #if ($sceneEnum.scene == 1)    @PreAuthorize("@ss.hasPermission('${permissionPrefix}:query')")#end
 
-    public CommonResult<List<${sceneEnum.prefixClass}${table.className}RespVO>> listByIds(@RequestParam("ids") Collection<${primaryColumn.javaType}> ids) {
-        List<${table.className}DO> list = service.listByIds(ids);
+    public CommonResult<List<${sceneEnum.prefixClass}${table.className}RespVO>> getList(@RequestParam("ids") Collection<${primaryColumn.javaType}> ids) {
+        List<${table.className}DO> list = service.getList(ids);
         return success(${table.className}Convert.INSTANCE.convertList(list));
     }
 
@@ -92,8 +92,8 @@ public class ${sceneEnum.prefixClass}${table.className}Controller {
     @Operation(summary = "获得${table.classComment}分页")
 #if ($sceneEnum.scene == 1)    @PreAuthorize("@ss.hasPermission('${permissionPrefix}:query')")#end
 
-    public CommonResult<PageResult<${sceneEnum.prefixClass}${table.className}RespVO>> page(@Valid ${sceneEnum.prefixClass}${table.className}PageReqVO pageVO) {
-        PageResult<${table.className}DO> pageResult = service.selectPage(pageVO);
+    public CommonResult<PageResult<${sceneEnum.prefixClass}${table.className}RespVO>> getPage(@Valid ${sceneEnum.prefixClass}${table.className}PageReqVO pageVO) {
+        PageResult<${table.className}DO> pageResult = service.getPage(pageVO);
         return success(${table.className}Convert.INSTANCE.convertPage(pageResult));
     }
 
@@ -104,7 +104,7 @@ public class ${sceneEnum.prefixClass}${table.className}Controller {
     @OperateLog(type = EXPORT)
     public void exportExcel(@Valid ${sceneEnum.prefixClass}${table.className}ExportReqVO exportReqVO,
               HttpServletResponse response) throws IOException {
-        List<${table.className}DO> list = service.selectList(exportReqVO);
+        List<${table.className}DO> list = service.getList(exportReqVO);
         // 导出 Excel
         List<${sceneEnum.prefixClass}${table.className}ExcelVO> datas = ${table.className}Convert.INSTANCE.convertList02(list);
         ExcelUtils.write(response, "${table.classComment}.xls", "数据", ${sceneEnum.prefixClass}${table.className}ExcelVO.class, datas);
